--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "create-react-app-sass",
+  "name": "trello-clone",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://stonecrafter.github.io/trello-clone",
   "dependencies": {
+    "gh-pages": "^2.0.1",
+    "node-sass-chokidar": "^1.3.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.5",
-    "node-sass-chokidar": "^1.3.3"
+    "react-scripts": "2.0.5"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
